passes UI automation tests